--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,12 +1,12 @@
 {{- $scratch := newScratch }}
 
-{{- if not .Lastmod.IsZero -}}
-{{- $scratch.Add "meta" (slice (printf "<span title='%s'>Updated %s\n</span>" (.Lastmod) (.Lastmod | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }}
-{{- else }}
-{{- if not .Date.IsZero -}}
-{{- $scratch.Add "meta" (slice (printf "<span title='%s'>%s</span>" (.Date) (.Date | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }}
-{{- end }}
-{{- end }}
+<!-- {{- if not .Lastmod.IsZero -}} -->
+<!-- {{- $scratch.Add "meta" (slice (printf "<span title='%s'>Updated %s\n</span>" (.Lastmod) (.Lastmod | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }} -->
+<!-- {{- else }} -->
+<!-- {{- if not .Date.IsZero -}} -->
+<!-- {{- $scratch.Add "meta" (slice (printf "<span title='%s'>%s</span>" (.Date) (.Date | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }} -->
+<!-- {{- end }} -->
+<!-- {{- end }} -->
 
 
 
